# knative-01functions

./: .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  circle-ci.sh  dockerfile  func.yaml  project.toml  pyproject.toml  pyvenv.cfg  requirements.txt  zshsource.sh
.circleci/: config.yml
func/: Makefile  pyproject.toml
function/: __init__.py  func.py  libs.py
tests/: test_func.py
